English for SourcesWindow and ConditionWindow

--- a/src/batch/addgroupwindow.ui
+++ b/src/batch/addgroupwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ajouter groupe</string>
+   <string>Add group</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="fieldGrowthPolicy">
