English in poolTab

--- a/src/tabs/pool-tab.ui
+++ b/src/tabs/pool-tab.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Nouvel onglet</string>
+   <string>New pool tab</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../resources.qrc">
@@ -71,7 +71,7 @@
            </size>
           </property>
           <property name="text">
-           <string>&lt;</string>
+           <string notr="true">&lt;</string>
           </property>
          </widget>
         </item>
@@ -93,7 +93,7 @@
            </size>
           </property>
           <property name="text">
-           <string>&gt;</string>
+           <string notr="true">&gt;</string>
           </property>
          </widget>
         </item>
@@ -152,7 +152,7 @@
         </size>
        </property>
        <property name="text">
-        <string>+</string>
+        <string notr="true">+</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -179,7 +179,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Peut-être avez-vous voulu dire :</string>
+         <string>Maybe you meant:</string>
         </property>
        </widget>
       </item>
@@ -208,7 +208,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Images par page</string>
+         <string>Images per page</string>
         </property>
        </widget>
       </item>
@@ -228,7 +228,7 @@
       <item row="0" column="2">
        <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>Nombre de colonnes</string>
+         <string>Number of columns</string>
         </property>
        </widget>
       </item>
@@ -245,7 +245,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>Post-filtrage</string>
+         <string>Post-filtering</string>
         </property>
        </widget>
       </item>
@@ -356,7 +356,7 @@
         </size>
        </property>
        <property name="text">
-        <string>&lt;&lt;</string>
+        <string notr="true">&lt;&lt;</string>
        </property>
       </widget>
      </item>
@@ -372,28 +372,28 @@
         </size>
        </property>
        <property name="text">
-        <string>&lt;</string>
+        <string notr="true">&lt;</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="buttonGetSel">
        <property name="text">
-        <string>Prendre séléctionnés</string>
+        <string>Get selected</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="buttonGetpage">
        <property name="text">
-        <string>Prendre cette page</string>
+        <string>Get this page</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="buttonGetAll">
        <property name="text">
-        <string>Prendre tout</string>
+        <string>Get all</string>
        </property>
       </widget>
      </item>
@@ -409,7 +409,7 @@
         </size>
        </property>
        <property name="text">
-        <string>&gt;</string>
+        <string notr="true">&gt;</string>
        </property>
       </widget>
      </item>
@@ -425,7 +425,7 @@
         </size>
        </property>
        <property name="text">
-        <string>&gt;&gt;</string>
+        <string notr="true">&gt;&gt;</string>
        </property>
       </widget>
      </item>
