--- a/src/settings/startwindow.ui
+++ b/src/settings/startwindow.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Premier lancement</string>
+   <string>First launch</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0,0">
    <item>
